# logq

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  flake.nix  rust-toolchain.toml
.github/workflows/: check.yml
src/: app.rs  highlight.rs  input.rs  lib.rs  main.rs
tests/: e2e.rs  integration.rs
