[package]
name = "logq"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
