[package]
name = "logq"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A terminal UI viewer for NDJSON and plain text streams"
repository = "https://github.com/ushitora-anqou/logq"

[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
]
# Checksums to generate for each App
checksum = "sha256"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[dependencies]
chrono = "0.4.44"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
libc = "0.2"
ratatui = "0.30"
regex = "1.12.3"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tui-input = "0.15"
